gcc/testsuite/rust/rustc/ui/issues/issue-75307.rs
fn main() {
    format!(r"{}{}{}", named_arg=1); // { dg-error "" "" { target *-*-* } }
}

